--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,751 @@
+* {
+  box-sizing: border-box;
+}
 
+:root {
+  --primary-color: #ffb900;
+  --font-heading: "Sen", sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: "Poppins", sans-serif;
+}
+
+/* common */
+a {
+  text-decoration: none;
+}
+
+.btn {
+  display: inline-block;
+  min-width: 118px;
+  padding: 0 16px;
+  line-height: 50px;
+  font-weight: 600;
+  font-size: 1.6rem;
+  text-align: center;
+  color: #fffcf4;
+  background: #171100;
+  border-radius: 999px;
+}
+
+.btn:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+
+.heading {
+  font-family: var(--font-heading);
+  font-weight: 670;
+  letter-spacing: -0.02em;
+  color: #171100;
+}
+
+.heading.lv1 {
+  font-size: 5.8rem;
+  line-height: 1.17;
+}
+
+.heading.lv2 {
+  font-size: 3.8rem;
+  line-height: 1.26;
+}
+
+.main-content {
+  width: 1170px;
+  max-width: calc(
+    100% - 48px
+  ); /* tinh chieu rong toi da cach deu 2 ben trai phai khi thu hep trang web */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* co the dung class nay cho ten nhung khoa hoc */
+.line-clamp {
+  /* hien thi 1 dong va cat duoi neu qua dai */
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+
+.work-break-all {
+  word-break: break-all; /* TH su dung khi khong co dau cach, dau gach ngang thi chu no se chayj xuyen qua */
+}
+
+/* hearder */
+.header {
+  background-color: #fffcf4;
+}
+
+.header.fixed {
+  position: sticky;
+  top: -28px;
+  z-index: 1; /* hien thi len tren */
+}
+
+.header .body {
+  display: flex;
+  /* margin-top: 47px; */
+  align-items: center;
+  padding: 36px 0 8px;
+}
+
+.nav {
+  margin-left: auto;
+}
+
+.nav ul {
+  display: flex;
+}
+
+.nav a {
+  position: relative;
+  padding: 8px 21px; /* tang vung bam cho the a */
+  font-size: 1.6rem;
+  color: #5f5b53;
+}
+
+nav a:hover,
+.nav li.active a {
+  /* active cho the a */
+  /* font-weight: 600; */
+  text-shadow: 1px 0 0 currentColor;
+  color: #171100;
+}
+
+.nav li.active a::after {
+  position: absolute;
+  content: "";
+  display: block; /* block de the a xuat hien dau gach duoi */
+  width: 12px;
+  height: 2px;
+  left: 21px;
+  bottom: 6px;
+  background: #171100;
+  border-radius: 1px;
+}
+
+.header .sign-up-btn {
+  min-width: 144px;
+}
+
+.header .action {
+  margin-left: 49px;
+}
+
+/* Hero */
+.hero {
+  padding: 56px 0 65px;
+  background: #fffcf4;
+}
+
+.hero .body {
+  display: flex;
+}
+
+/* hero left */
+.hero .media-block {
+  position: relative;
+  width: 48%;
+}
+
+.hero-summary {
+  position: absolute;
+  right: 0;
+  bottom: 48px;
+  width: 270px;
+  padding: 24px;
+  background: #ffffff;
+  box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05);
+  border-radius: 12px;
+}
+
+.hero .media-block .img {
+  width: 470px;
+  height: 685px;
+  object-fit: cover;
+  border-radius: 20px;
+  display: block;
+}
+
+.hero-summary .item {
+  display: flex;
+  align-items: center;
+}
+
+.hero-summary .item + .item {
+  margin-top: 22px;
+}
+
+.hero-summary .icon {
+  width: 48px;
+  height: 48px;
+  background: #fff9e8;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-summary .item:nth-of-type(2) .icon {
+  background: #fcefff;
+}
+
+.hero-summary .item:nth-of-type(3) .icon {
+  background: #ebeaff;
+}
+
+.hero-summary .info {
+  margin-left: 16px;
+}
+
+.hero-summary .lable {
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #5f5b53;
+}
+
+.hero-summary .title {
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #171100;
+}
+
+/* hero right */
+.hero .content-block {
+  width: 52%;
+  padding: 64px 0 0 130px;
+}
+
+.hero .desc {
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #5f5b53;
+  padding-top: 22px;
+}
+
+.hero .cta-group {
+  display: flex;
+  align-items: center; /* canh giua*/
+  padding: 38px 0 48px;
+}
+
+.hero-cta {
+  min-width: 180px;
+  line-height: 64px;
+  background-color: var(--primary-color);
+}
+
+.hero .watch-video {
+  display: flex;
+  padding-left: 28px;
+  align-items: center;
+  border: none; /* bo border */
+  background-color: transparent;
+  cursor: pointer; /* hieu ung chuot khi di chuyen vao */
+}
+
+.hero .watch-video .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background: #fff9e8;
+  border-radius: 50%;
+  background: #ffffff;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.07);
+}
+
+.hero .watch-video span {
+  margin-left: 14px;
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #171100;
+}
+
+.hero .stats {
+  margin-left: -28px;
+}
+
+.hero .stats strong {
+  padding: 0 8px 0 28px;
+  font-family: var(--font-heading);
+  font-weight: 700;
+  font-size: 4.4rem;
+  line-height: 1.23;
+  color: #171100;
+}
+
+/* Popular */
+.popular {
+  padding: 65px 0;
+  margin-top: 135px;
+}
+
+.popular-top {
+  display: flex;
+  justify-content: space-between; /* canh deu 2 ben */
+  align-items: center;
+}
+
+.popular-top .desc {
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #5f5b53;
+  margin-top: 16px;
+  width: 458px;
+}
+
+.popular-top .controls {
+  display: flex; /* hien thi theo chieu ngang */
+  gap: 18px; /* khoang cach giua 2 phan tu (2 nut) */
+}
+
+.popular-top .control-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary-color); /* mau mac dinh (currentColor) nut bam */
+  border: 1px solid var(--primary-color);
+  background: transparent;
+}
+
+.popular-top .control-btn:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
+  cursor: pointer;
+}
+
+/* Course list (item) */
+.popular .coures-list {
+  display: flex;
+  gap: 30px; /* khoang cach giua cac item (3 khoa hoc) */
+  margin-top: 55px;
+}
+
+.popular .coures-item {
+  flex: 1; /* chia deu 3 phan tu (bang nhau) */
+  background: #ffffff;
+  border: 1px solid #e2dfda;
+  border-radius: 12px;
+}
+
+.popular .coures-item:hover {
+  border-color: transparent;
+  box-shadow: 0px 16px 36px rgba(0, 0, 0, 0.05);
+}
+
+.popular .coures-item .thumb {
+  width: calc(100% + 2px); /* lap day hinh anh ow khung vien (do margin -1px) */
+  height: 278px;
+  margin: -1px; /* bo vien */
+  object-fit: cover;
+  border-radius: 12px 12px 0 0;
+}
+
+.popular .coures-item .info {
+  padding: 16px 22px 22px;
+}
+
+.popular .coures-item .rating, /* dau sao danh gia (dung chung) */
+.popular .coures-item .foot, /* so hoc vien (dung chung) */
+.popular .coures-item .head {
+  display: flex;
+  align-items: center; /* canh giua truc ngang*/
+  justify-content: space-between; /* canh giua truc doc */
+}
+
+.popular .coures-item .title a {
+  padding-right: 6px;
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #171100;
+}
+
+.popular .rating .value {
+  margin-left: 6px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #fea31b;
+}
+
+.popular .coures-item .desc {
+  margin-top: 6px;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #5f5b53;
+}
+
+.popular .coures-item .foot {
+  margin-top: 12px;
+}
+
+.popular .coures-item .price {
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #171100;
+}
+
+.popular .coures-item .book-btn {
+  border: none;
+}
+
+.popular .coures-item .book-btn:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
+}
+
+/* Feedback */
+.feedback {
+  margin-top: 135px;
+  padding: 96px 0;
+  background: #2e2100;
+}
+
+.feedback-list {
+  display: flex; /* hien thi theo chieu ngang cho cac noi dung list */
+  overflow: hidden; /* khong cho hien thi noi dung vuot qua khung hinh */
+}
+
+.feedback-item {
+  display: flex;
+  width: 100%;
+  flex-shrink: 0; /* khong cho thu hep (ve kich thuoc cu) */
+}
+
+.feedback-item .avatar {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.feedback-item .info .title {
+  font-family: var(--font-heading);
+  margin-top: 18px;
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 1.42;
+  color: #f7f7f7;
+}
+
+.feedback-item .info .desc {
+  margin-top: 4px;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #bfbcb2;
+}
+
+.feedback-item .dots {
+  display: flex;
+  margin-top: 28px;
+}
+
+.feedback-item .dot {
+  margin-right: 6px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #634700;
+  cursor: pointer;
+}
+
+.feedback-item .dot.active {
+  background: #ffb900;
+  cursor: default; /* khong cho click vao */
+}
+
+.feedback-item .content {
+  width: 66%;
+  margin-left: auto;
+}
+
+.feedback-item blockquote {
+  margin-left: 30px;
+  font-style: italic;
+  font-size: 2.6rem;
+  line-height: 1.54;
+  color: #ffffff;
+}
+
+/* Features 1 */
+.features {
+  margin-top: 135px;
+  padding: 96px 0;
+}
+
+.features .body {
+  display: flex;
+  justify-content: space-between; /* canh deu 2 ben */
+}
+
+.features .images {
+  display: flex;
+  gap: 0 30px; /* khoang cach giua cac hinh anh) */
+}
+
+.features .images img {
+  /* kich thuoc cua hinh hinh => tac dong vao dung the img */
+  width: 270px;
+  height: 404px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+.features img.lower {
+  margin-top: 34px;
+}
+
+.features .content {
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* canh trai */
+  justify-content: center; /* canh giua */
+}
+
+.features .desc {
+  margin-top: 16px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #5f5b53;
+}
+
+.features .content .cta-btn {
+  min-width: 137px;
+  margin-top: 43px;
+}
+
+.features .content .cta-btn:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
+}
+
+/* Features-2nd */
+.features-2nd {
+  margin-top: 70px;
+}
+
+.features-2nd .body {
+  flex-direction: row-reverse; /* dao nguoc thu tu 2 phan tu */
+}
+
+.features-2nd .content {
+  width: 49%;
+}
+
+.features-2nd .images img {
+  width: 470px;
+  height: 440px;
+}
+
+/* Blog */
+.blog {
+  margin-top: 135px;
+  padding: 96px 0;
+  background: #fffcf4;
+}
+
+.blog .blog-top {
+  text-align: center;
+}
+
+.blog .blog-top .desc {
+  margin: 16px auto auto; /* canh giua khi bi lech boi width 448px */
+  width: 448px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #696262;
+}
+
+.blog .blog-list {
+  display: flex;
+  gap: 30px;
+  margin-top: 55px;
+}
+
+.blog .item {
+  width: 33.33%;
+  background: #ffffff;
+  border-radius: 16px;
+}
+
+.blog .item:hover {
+  box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05);
+}
+
+.blog .item .thumb {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 16px 16px 0 0;
+}
+
+.blog .item .info {
+  padding: 20px 20px 28px;
+}
+
+.blog .item .date {
+  position: relative;
+  display: inline-flex; /* hien thi theo chieu ngang  (**)*/
+  align-items: center; /* canh giua truc ngang(**)*/
+  padding-bottom: 12px;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #5f5b53;
+}
+
+.blog .item .date::before {
+  content: "";
+  display: inline-block; /* hien thi theo chieu ngang */
+  width: 6px;
+  height: 6px;
+  margin-right: 4px;
+  border-radius: 50%;
+  background: var(--primary-color);
+}
+
+.blog .item .date::after {
+  position: absolute;
+  left: 0;
+  right: -27px;
+  bottom: 0;
+  content: "";
+  display: inline-block; /* hien thi theo chieu ngang */
+  height: 1px;
+  background: #e2dfda;
+  border-radius: 0.5px;
+}
+
+.blog .item .title a {
+  display: inline-block; /*do the a la inline cho nen phai su dunng inline-block moi mt:12px */
+  margin: 12px;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #171100;
+}
+
+.blog .item .btn {
+  font-size: 1.4rem;
+}
+
+.blog .item .btn:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
+}
+
+/* dau 3 cham */
+.blog .dots {
+  display: flex;
+  gap: 6px;
+  justify-content: center; /* canh giua truc doc */
+  margin-top: 38px;
+}
+
+.blog .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #5f5b53;
+  cursor: pointer;
+}
+
+.blog .dot.active {
+  cursor: default;
+  background: var(--primary-color);
+}
+
+/* Footer */
+.footer {
+  padding: 96px 135px 0;
+  background: #2e2100;
+}
+
+.footer .row {
+  display: flex;
+  padding-bottom: 38px;
+  border-bottom: 1px solid #59554b;
+}
+
+.footer .row .column {
+  width: 21.6%;
+}
+
+.footer .row .column:first-child {
+  width: 35%;
+}
+
+.footer .desc {
+  margin-top: 18px;
+  max-width: 267px;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #bfbcb2;
+}
+
+.footer .socials {
+  display: flex;
+  gap: 18px;
+  margin-top: 18px;
+}
+
+.footer .title {
+  display: inline-block; /* do the h3 la inline => su dung inline-block de gioi han chieu ngang (do rong bang noi dung no chua) */
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #ffffff;
+  border-bottom: 1px solid #59554b;
+  padding: 0 48px 14px 0;
+}
+
+.footer .list {
+  margin-top: 48px;
+}
+
+.footer .list a {
+  display: inline-block;
+  margin-bottom: 12px;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #bfbcb2;
+}
+
+.footer .list li:last-child a {
+  margin-bottom: 0;
+}
+
+.footer .list strong {
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.footer .copyright {
+  padding: 28px 0;
+}
+
+.footer .copyright p {
+  font-size: 1.4rem;
+  line-height: 1.86;
+  text-align: center;
+  color: #807d74;
+}
